--- a/data.tex
+++ b/data.tex
@@ -117,6 +117,7 @@
 
 
 \begin{document}
+\setcounter{tocdepth}{3}    % （項を目次に出す）
 
 \input{title.tex}
 \pagenumbering{roman}  % i, ii, iii, ...
@@ -136,23 +137,23 @@
 \include{introduction/how2read.tex}
 \clearpage
 \pagenumbering{arabic}
-% \include{introduction/chapter1.tex}
-% \include{introduction/chapter2.tex}
-% \include{introduction/chapter3.tex}
-% \include{introduction/chapter4.tex}
-% \include{part1/chapter1.tex}
-% \include{part1/chapter2.tex}
-% \include{part1/chapter3.tex}
-% \include{part1/chapter4.tex}
-% \include{part1/chapter5.tex}
-% \include{part2/chapter1.tex}
-% \include{part2/chapter2.tex}
+\include{introduction/chapter1.tex}
+\include{introduction/chapter2.tex}
+\include{introduction/chapter3.tex}
+\include{introduction/chapter4.tex}
+\include{part1/chapter1.tex}
+\include{part1/chapter2.tex}
+\include{part1/chapter3.tex}
+\include{part1/chapter4.tex}
+\include{part1/chapter5.tex}
+\include{part2/chapter1.tex}
+\include{part2/chapter2.tex}
 \include{part2/chapter3.tex}
-% \include{part2/chapter4.tex}
-% \include{part2/chapter5.tex}
-% \include{part2/chapter6.tex}
-% \include{conclusion/chapter1.tex}
-% \include{conclusion/acknowledgement.tex}
+\include{part2/chapter4.tex}
+\include{part2/chapter5.tex}
+\include{part2/chapter6.tex}
+\include{conclusion/chapter1.tex}
+\include{conclusion/acknowledgement.tex}
 
 % 下のサイトにいろんなスタイルあり。どれかを選ぶ。
 % https://mathlandscape.com/latex-bibstyles/
