--- a/part2/chapter1.tex
+++ b/part2/chapter1.tex
@@ -214,7 +214,7 @@ Expressionは日本語だと「表情/表現」という二重の意味をもつ
 \end{quotation}
 表情におよそ相当するのは、カタカナで表記された、オノマトペを主とした述語的部分である。
 廣松はこのように、「表情」を言葉の問題にむすびつけながら考究している。
-末尾にある「環界的情景」とは、（私たちひとの生きる）環世界\cite{uexküll:1934}のことである。
+末尾にある「環界的情景」とは、（私たちひとの生きる）環世界\cite{uexkull:1934}のことである。
 ユクスキュルの環世界\cite{uexkull:1934}は、それぞれの生物が客観的には同じ環境に存在していても独自な意味世界を生きていることを主張するものである（\ref{subsec:umwelt}節）。
 廣松の「表情」は、とくに人間の環世界に着目し、人間の環世界は無味乾燥で殺風景なものではなく、
 意味に満ち充ちた生々しいものである、ということを強調するものだと解釈できよう。
@@ -295,7 +295,7 @@ Expressionは日本語だと「表情/表現」という二重の意味をもつ
 「相（phase）」とは、物質でいう「固体相・液体相・気体相」のように、表層的にあらわれ出ている状態であると考えられる。
 
 \textbf{情緒価}は、「感情価」「情動価」とも表記ゆれしうるという。末尾の「価（value・potential）」とは、知覚「相」とくらべて、「こもっている」「帯びている」ようなありようを示しているのだと著者は解釈している。
-色彩心理学が示すように、赤に「情熱」を・青に「冷静」を見てとってしまうというのが簡単な例になるだろう。
+色彩心理学が示すように、赤に「情熱」を・青に「冷静」を見てとってしまうというのが簡単な例と言えよう。
 ただ廣松によれば、感情価はこうした単純な「喜怒哀楽」だけに限らない。
 
 \textbf{即応価}は、廣松は「行動価」または「信号価」とも呼んでいる。
@@ -304,6 +304,15 @@ Expressionは日本語だと「表情/表現」という二重の意味をもつ
 また、郵便受けが「入れてください」と言っているように知覚されるという、ゲシュタルト心理学でいわれる\textbf{要求特性}\cite{kofka:1935}も、即応価の契機のわかりやすい例であろう。
 「運動共感」という考え方\cite{kaneko:2005}も、即応価に相当するだろう。
 ミラーニューロン\cite{Rizzolatti:2004}やカノニカルニューロンと呼ばれるニューロン群の存在は、即応価の存在の根拠ともなりうる神経的基盤であろう。
+
+近年の認知科学領域で提唱される構成的情動理論\cite{barret_2017}はこれと密接に関連する。
+構成的情動理論では、情動を、単に刺激に対する受動的な生理「反応」や生得的なカテゴリでは捉えない。
+そうではなく、身体全体のエネルギー予算の最適化のために、
+五感や内受容感覚としての身体内外の環境情報をボトムアップに要約する処理
+と、
+過去の経験から形成されたトップダウンな予測制御処理
+とが両方向から合流して「構成」されるものが情動だと考える。
+すなわち、表情が知覚・行為・情緒といった認知を豊かに孕み、主体の身構えに呼応して立ち現れるという考え方を支持する理論である。
 
 知覚相・情緒価・即応価をさらに、下位的に分析してみるならば、
 \begin{quote}
@@ -370,11 +379,13 @@ Expressionは日本語だと「表情/表現」という二重の意味をもつ
   \label{fig:hyojoandshintaichinomanabi}
 \end{figure}
 
-\section{動いている身体の「表情」を感得することのむずかしさ}
+\section{動いている身体の「表情」を感得することの重要性と難しさ}
 \label{sec:学びにおける、動く身体を鑑賞するという体験}
-序論の\ref{sec:ugoiteirushintainohyojo_intro}節でも頭出ししておいた問題を再度述べよう。
-運動学習者はしばしば、自身の運動を撮影した動画や、他者の運動をみて観察して、そこからさまざまに内省する。
-このとき、その動いている身体が醸し出す「表情」はつい、認識や内省から取りこぼされてしまう。
+表情は、意味の源である。
+表情を感得することによって、身体部位どうしの関係性への着眼や、ややもすると漏らしてしまうような身体感覚など、
+意味づくりの可能性が広がるはずであると考える。
+しかし、運動学習者はしばしば、自身の運動を撮影した動画や、他者の運動をみて観察して、そこからさまざまに内省するが、
+このとき、その動いている身体が醸し出す「表情」はつい、認識や内省から取りこぼされてしまうのである。
 「表情」は、観察者の身構え（要するにノエシス）に応じて立ち現れてくる。
 「学び取ってやろう」と身構えるほど、その志向は、物的な身体運動の一部の特徴に絞られてしまいがちである。
 そこには豊かな「表情」があるのに、観察者が取りこぼしているとするならば、それは意味づくりの可能性を狭めていることにもなってしまう。
