--- a/reference.bib
+++ b/reference.bib
@@ -185,6 +185,16 @@
   year    = {2004},
   doi     = {10.1523/JNEUROSCI.0504-04.2004}
 }
+@article{suwa_2004,  
+	title = {Discussion on Pragmatic Studies to Synthesize Creative Processes},
+  author={Suwa, M.},
+  journal={Journal of the Japanese Society for Artificial Intelligence},
+  volume={19},
+  number={2},
+  pages={205-213},
+  year={2004},
+	note = {(in Japanese)}  
+}
 @article{suwa_et_al:2012,
   author  = {諏訪 正樹 and 筧 康明 and 矢島 佳澄 and 仰木 裕嗣},
   journal = {電子情報通信学会誌},
@@ -314,7 +324,14 @@
   year      = {1996},
   note      = {原著はBernsteinがロシア語で書いた草稿:(On Dexterity and Its Development)},  
 }
-
+@book{barret_2017,
+	author = {Barret, L., F.},
+	editor = {},
+	publisher = {Houghton Mifflin Harcourt},
+	title = {How Emotions are Made: The Secret Life of the Brain},
+	address = {Boston, Massachusetts},
+	year = {2017}
+}
 @book{blankenburg,
   author     = {Blankenburg, Wolfgang.},
   editor     = {},
@@ -373,6 +390,14 @@
   publisher = {Bruno Cassirer Verlag},
   title     = {Philosophie der symbolischen Formen, 3. Teil: Phänomenologie der Erkenntnis},
   year      = {1929}
+}
+@book{fitts:1967,
+	author = {Fitts, P. and Posner, M.I.},
+	editor = {},
+	publisher = {Brooks/Cole},
+	title = {Human Performance},
+	address = {Pacific Grove, California},
+	year = {1967}
 }
 @book{gallagher:2023,
   author    = {Gallagher, S.},
@@ -477,6 +502,17 @@
   title          = {なぜエピソード記述なのか 「接面」の心理学のために},
   year           = {2013}
 }
+@inbook{lakoff_1993,
+	author =	"Lakoff, G.",
+	title =		"The contemporary theory of metaphor",
+	booktitle = "Metaphor and thought",		
+	chapter = 11,
+	pages =		"202--251",
+	publisher =	"Cambridge University Press",	
+	edition =	"2nd",
+	address = "Cambridge",
+	editor = "Ortony, A.",
+	year =		1993}
 @book{lakoff_johnson,
   author    = {Lakoff, G. and Johnson, M.},
   jauthor   = {G・レイコフ and M・ジョンソン},
@@ -485,6 +521,7 @@
   publisher = {The University of Chicago Press},
   note      = {(G・レイコフ, M・ジョンソン(著), 渡部昇一, 楠瀬淳三, 下谷和幸（訳）『レトリックと人生』大修館書店, 1986)}
 }
+
 @book{lave_and_wenger:1991,
   author    = {Lave, J. and Wenger, E.},
   title     = {Situated Learning: Legitimate peripheral participation},
@@ -533,6 +570,13 @@
   title = "もの・こと・ことばのイメージから引ける 比喩の辞典",
   publisher = "東京堂出版",
   year = 2023
+}
+@book{nakanishi_2024,
+	author = {中西 泰人 and 本江 正茂 and 石川 初},
+	editor = {},
+	publisher = {BNN新社},
+	title = {スマートシティとキノコとブッダ 人間中心「ではない」デザインの思考法},
+	year = {2024}
 }
 % ラバン記譜法
 @book{laban:1971,
